# rune

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/workflows/: docs.yml  test.yml
architecture/overview/: index.html
concepts/a2a/: index.html
concepts/agents/: index.html
concepts/channels/: index.html
concepts/compose/: index.html
concepts/mcp/: index.html
concepts/models/: index.html
concepts/tools/: index.html
concepts/workflows/: index.html
crates/rune-a2a/: Cargo.toml
crates/rune-a2a/src/: client.rs  error.rs  jsonrpc.rs  lib.rs  types.rs
crates/rune-backend/rune-docker/: Cargo.toml
crates/rune-backend/rune-docker/src/: lib.rs
crates/rune-backend/rune-k8s/: Cargo.toml
crates/rune-backend/rune-k8s/src/: lib.rs  manifests.rs  wait.rs
crates/rune-backend/rune-wasm/: Cargo.toml
crates/rune-backend/rune-wasm/src/: instance.rs  lib.rs
crates/rune-channels/: Cargo.toml
crates/rune-channels/src/: bluesky.rs  bridge.rs  config.rs  dingtalk.rs  discord.rs  discourse.rs  email.rs  error.rs  feishu.rs  flock.rs  formatter.rs  gitter.rs  google_chat.rs  gotify.rs  guilded.rs  irc.rs  keybase.rs  lib.rs  line.rs  linkedin.rs  mastodon.rs  matrix.rs  mattermost.rs  messenger.rs  mumble.rs  nextcloud.rs  nostr.rs  ntfy.rs  pumble.rs  reddit.rs  registry.rs  revolt.rs  rocketchat.rs  router.rs  signal.rs  slack.rs  teams.rs  telegram.rs  threema.rs  twist.rs  (+8 more)
crates/rune-cmd/: Cargo.toml  cli.rs  main.rs
crates/rune-cmd/commands/: agent.rs  cluster.rs  compose.rs  daemon_status.rs  debug.rs  mod.rs  rm.rs  run.rs  sessions.rs  start.rs  status.rs  stop.rs  stop_agent.rs
crates/rune-cp/: Cargo.toml
crates/rune-cp/src/: admission.rs  error.rs  lib.rs  registry.rs
crates/rune-cp/src/routes/: deployments.rs  mod.rs  registry.rs
crates/rune-env/: Cargo.toml
crates/rune-env/src/: agent.rs  error.rs  lib.rs  platform.rs
crates/rune-gateway/: Cargo.toml
crates/rune-gateway/src/: channel_bridge.rs  error.rs  lib.rs  middleware.rs
crates/rune-gateway/src/routes/: a2a.rs  canvas.rs  channels.rs  health.rs  invoke.rs  mcp.rs  mod.rs  sessions.rs
crates/rune-mcp/: Cargo.toml
crates/rune-mcp/src/: client.rs  error.rs  lib.rs  server.rs  types.rs
crates/rune-network/: Cargo.toml
crates/rune-network/src/: error.rs  lib.rs  policy.rs  registry.rs
crates/rune-runtime/: Cargo.toml
crates/rune-runtime/src/: backend.rs  cache.rs  db.rs  error.rs  lib.rs  metrics.rs  migrations.rs  models.rs  reconcile.rs  rollout.rs  router.rs  scheduler.rs  signature.rs  storage.rs
crates/rune-runtime/src/engine/: agent_ops.rs  loader.rs  mod.rs  planner.rs  policy.rs  process_runner.rs  session.rs  tool_dispatcher.rs  wasm_runner.rs  workflow.rs
crates/rune-runtime/src/engine/llm/: anthropic.rs  claude_code.rs  copilot.rs  gemini.rs  mod.rs  openai.rs
crates/rune-spec/: Cargo.toml
crates/rune-spec/src/: agent.rs  compose.rs  error.rs  lib.rs  models.rs  runefile.rs  runtime.rs  tool.rs  workflow.rs
crates/rune-storage/: Cargo.toml
crates/rune-storage/proto/: raft.proto
crates/rune-storage/src/: error.rs  lib.rs  migrations.rs  models.rs  object_store.rs  pool.rs
crates/rune-storage/src/ops/: a2a.rs  agent_ops.rs  cache.rs  deployments.rs  mod.rs  network.rs  policy.rs  registry.rs  replicas.rs  requests.rs  schedules.rs  session_route.rs  sessions.rs  tools.rs
crates/rune-storage/src/raft/: mod.rs  network.rs  server.rs  store.rs  types.rs
crates/rune-store-runtime/: Cargo.toml
crates/rune-store-runtime/src/: error.rs  lib.rs  store.rs  types.rs
crates/rune-tools/: Cargo.toml
crates/rune-tools/src/: agent.rs  browser.rs  canvas.rs  channel.rs  defs.rs  docker.rs  fs.rs  knowledge.rs  lib.rs  media.rs  memory.rs  process.rs  schedule.rs  shell.rs  system.rs  task.rs  web.rs
docs/: index.md  spec.md
docs/architecture/: overview.md
docs/concepts/: a2a.md  agents.md  channels.md  compose.md  mcp.md  models.md  tools.md  workflows.md
docs/examples/: index.md
docs/getting-started/: first-agent.md  installation.md  quickstart.md
docs/reference/: api.md  cli.md  compose-yaml.md  models-yaml.md  runtime-yaml.md  spec-yaml.md  tools-yaml.md  workflow-yaml.md
e2e/: Cargo.toml  lib.rs
e2e/tests/: a2a_test.rs  compose_test.rs  health_test.rs  invoke_test.rs
e2e/tests/common/: mod.rs
examples/: index.html
examples/basic-example/: README.md  Runefile  channels.yaml  rune-compose.yml
examples/code-assistant/: README.md  Runefile  rune-compose.yml
examples/custom-tool-python/: README.md  Runefile  rune-compose.yml
examples/custom-tool-python/tools/: analyse_sentiment.py  analyse_sentiment.yaml
examples/mcp-agent/: README.md  Runefile  rune-compose.yml
examples/memory-agent/: README.md  Runefile  rune-compose.yml
examples/multi-agent/: README.md  rune-compose.yml  workflow.yaml
examples/multi-agent/analyst/: Runefile
examples/multi-agent/researcher/: Runefile
examples/multi-agent/router/: Runefile
examples/scheduled-reporter/: README.md  Runefile  rune-compose.yml
examples/web-researcher/: README.md  Runefile  rune-compose.yml
getting-started/first-agent/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
reference/api/: index.html
reference/cli/: index.html
reference/compose-yaml/: index.html
reference/models-yaml/: index.html
reference/rulefile/: index.html
reference/runtime-yaml/: index.html
reference/tools-yaml/: index.html
reference/workflow-yaml/: index.html
scripts/: install.sh
search/: search_index.json
spec/: index.html
