[package]
name = "rune-channels"
version = "0.1.0"
edition = "2021"
description = "Channel Bridge Layer — pluggable messaging integrations for Rune"

[dependencies]
rune-env = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
axum = { workspace = true }
bytes = { workspace = true }
lettre = { workspace = true }
hex = { workspace = true }
url = { workspace = true }
base64 = { workspace = true }
urlencoding = "2"
dashmap = "6"
zeroize = { workspace = true }
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
hmac = "0.12"
sha2 = "0.10"
secp256k1 = "0.28"
html-escape = "0.2"
imap = "2"
native-tls = "0.2"
mailparse = "0.15"
