[package]
name = "rune"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rune"
path = "main.rs"

[dependencies]
rune-spec = { workspace = true }
rune-env = { workspace = true }
rune-storage = { workspace = true }
rune-runtime = { workspace = true }
rune-cp = { workspace = true }
rune-gateway = { workspace = true }
rune-channels = { workspace = true }
rune-wasm-backend = { workspace = true }
rune-docker-backend = { workspace = true }
rune-k8s-backend = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["registry"] }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
tracing-opentelemetry = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
tempfile = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
openraft = { workspace = true }
tonic = { workspace = true }
dirs = "6.0.0"
