[package]
name = "rune-runtime"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
rune-spec = { workspace = true }
rune-env = { workspace = true }
rune-a2a = { workspace = true }
rune-storage = { workspace = true }
rune-network = { workspace = true }
rune-tools = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
wasmtime = { workspace = true }
metrics = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
cron = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
