[package]
name = "rune-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
rune-env = { workspace = true }
rune-store-runtime = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
openraft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
bincode = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
tonic-build = "0.12"
