[package]
name = "rune-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
rune-env = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
bollard = { workspace = true }
rune-a2a = { workspace = true }
tokio-tungstenite = { workspace = true }
lettre = { workspace = true }
base64 = { workspace = true }
zeroize = { workspace = true }
